--- a/ObjectDiffNet.Extensions.EntityFramework/ObjectDiffNet.Extensions.EntityFramework.csproj
+++ b/ObjectDiffNet.Extensions.EntityFramework/ObjectDiffNet.Extensions.EntityFramework.csproj
@@ -1,14 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>1.0.0</Version>
+    <Authors>Lee Dale</Authors>
+    <Description>Provides extentions for ObjectDiffNet that work with Microsoft Entity Framework objects.</Description>
+    <IsPackable>true</IsPackable>
     <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>12.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
-    <PackageReference Include="ObjectDiffNet" Version="0.0.2" />
+    <PackageReference Include="ObjectDiffNet" Version="1.0.0" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    <None Include="..\LICENSE" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
